--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,1 +1,20 @@
-<h1>Hola Amigos</h1>
+<h1>Hola Maker</h1>
+
+<h2>Productos</h2>
+
+<table>
+  <tr>
+    <th> Id </th>
+    <th> Nombre </th>
+    <th> URL </th>
+    <th> Descripción </th>
+  </tr>
+  <% @products.each do |product| %>
+    <tr>
+      <td><%= product.id %></td>
+      <td><%= product.name %></td>
+      <td><%= product.url %></td>
+      <td><%= product.description %></td>
+    </tr>
+  <% end %>
+</table>
