--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -3,6 +3,11 @@
     <div class="col-sm-12">
       <h1>Hola Maker!</h1>
       <h2>Productos</h2>
+
+      <div class="text-right">
+          <%= link_to "Publicar Producto", new_product_path, class: "btn btn-primary" %>
+      </div>
+
       <table class="table">
         <tr>
           <th> Id </th>
