--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -7,7 +7,7 @@
           <%= f.text_field :name, class: "form-control input-lg", placeholder: "Ingresa el nombre del producto" %>
         </div>
         <div class="form-group">
-          <%= f.text_field :name, class: "form-control input-lg", placeholder: "Ingresa La url del Producto" %>
+          <%= f.text_field :url, class: "form-control input-lg", placeholder: "Ingresa La url del Producto" %>
         </div>
         <div class="form-group">
           <%= f.text_area :description, class: "form-control input-lg", placeholder: "Ingresa la Descripción del Producto" %>
